--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-beautifulsoup4==4.12.0
-pandas==1.5.2
+beautifulsoup4==4.12.2
+pandas==2.0.2
 pretty_midi==0.2.10
 pychord==1.2.0
-pygame==2.1.3
-requests==2.28.2
-selenium==4.8.3
-snscrape==0.6.1.20230315.dev2+gedac5f3
+pygame==2.4.0
+Requests==2.31.0
+selenium==4.10.0
+snscrape==0.6.2.20230320
 wikipedia==1.4.0
